--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap');
 
+@font-face {
+    font-family: aksara;
+    src: url(/dist/font/New\ Kramawirya1.ttf);
+}
+
 body {
     font-family: 'Outfit', sans-serif;
     @apply bg-bg_color overflow-x-hidden;
@@ -13,6 +18,10 @@ body {
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.titletext {
+    font-family: aksara, sans-serif;
 }
 
 .hamburger-line{
